--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test-watch": "jest --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -34,5 +35,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@types/jest": "^29.2.3",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1"
   }
 }
